// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders form and user can fill it and submit and form is saved to local storage 1`] = `
{
  "dirty": true,
  "errors": {},
  "initialErrors": {},
  "initialTouched": {},
  "initialValues": {
    "hasEmailNotification": true,
    "hasSmsNotification": false,
    "isMandatoryAdditionalInformationRequired": false,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": false,
    "language": "",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": "",
      "extraNeeds": "",
      "groupName": "",
      "groupSize": "",
      "person": {
        "emailAddress": "",
        "name": "",
        "phoneNumber": "",
      },
      "studyLevels": [],
      "unitId": "",
      "unitName": "",
    },
  },
  "isSubmitting": true,
  "isValid": true,
  "isValidating": false,
  "submitCount": 2,
  "touched": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": true,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": true,
    "person": {
      "emailAddress": true,
      "name": true,
      "phoneNumber": true,
    },
    "studyGroup": {
      "amountOfAdult": true,
      "extraNeeds": true,
      "groupName": true,
      "groupSize": true,
      "person": {
        "emailAddress": true,
        "name": true,
        "phoneNumber": true,
      },
      "studyLevels": [
        true,
        true,
      ],
      "unitId": true,
      "unitName": true,
    },
  },
  "validateOnBlur": true,
  "validateOnChange": true,
  "validateOnMount": false,
  "values": {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": false,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": 2,
      "extraNeeds": "Lisätietoja ilmoittautumiseen",
      "groupName": "4a",
      "groupSize": 10,
      "person": {
        "emailAddress": "testi@testi.fi",
        "name": "Nimi Niminen",
        "phoneNumber": "123321123123321123",
      },
      "studyLevels": [
        "GRADE_4",
        "GRADE_2",
      ],
      "unitId": null,
      "unitName": "Testikoulu",
    },
  },
}
`;

exports[`renders form and user can fill it and submit and form is saved to local storage 2`] = `
[
  {
    "hasEmailNotification": true,
    "hasSmsNotification": true,
    "isMandatoryAdditionalInformationRequired": false,
    "isSameResponsiblePerson": true,
    "isSharingDataAccepted": true,
    "language": "FI",
    "person": {
      "emailAddress": "",
      "name": "",
      "phoneNumber": "",
    },
    "studyGroup": {
      "amountOfAdult": 2,
      "extraNeeds": "Lisätietoja ilmoittautumiseen",
      "groupName": "4a",
      "groupSize": 10,
      "person": {
        "emailAddress": "testi@testi.fi",
        "name": "Nimi Niminen",
        "phoneNumber": "123321123123321123",
      },
      "studyLevels": [
        "GRADE_4",
        "GRADE_2",
      ],
      "unitId": null,
      "unitName": "Testikoulu",
    },
  },
  {
    "resetForm": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFormikState": [Function],
    "setStatus": [Function],
    "setSubmitting": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submitForm": [Function],
    "validateField": [Function],
    "validateForm": [Function],
  },
]
`;
